--- a/test.ipynb
+++ b/test.ipynb
@@ -405,26 +405,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable int object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\MUDITS~1\\AppData\\Local\\Temp/ipykernel_23152/3425868892.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdict1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'abc'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'bcd'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'cde'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'def'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'efg'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'fgh'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'ghi'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'hij'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'ijk'\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'jkl'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'lmn'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'mno'\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdict1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict1 = {1:['abc','bcd','cde'],2:['def','efg','fgh'],3:{'ghi','hij','ijk'},4:{'jkl','lmn','mno'}}\n",
     "\n",
-    "for k, v in dict1.items():\n",
-    "    print(v)"
+    "for i in dict1.items():\n",
+    "    # for i in v:\n",
+    "    print(i)"
    ]
   },
   {
@@ -432,7 +421,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from ast import Break\n",
+    "import json\n",
+    "import cx_Oracle as cx\n",
+    "\n",
+    "cnxn_pool = cx.SessionPool('PVD_MART_30AUG','rxlogix','10.100.22.99:1521/PVSDEVDB',min=10,max=15,encoding='UTF-8')\n",
+    "def push_data():\n",
+    "    # print(\"Thread Started  ->\",time.time())\n",
+    "    print(\"\"\"\n",
+    "          |\n",
+    "          |\n",
+    "          |\n",
+    "          \"\"\")\n",
+    "    with open('read.json','r') as insert_stat:\n",
+    "        string = insert_stat.read()\n",
+    "        X = json.loads(string)\n",
+    "        cnxn = cnxn_pool.acquire()\n",
+    "        cursor = cnxn.cursor()\n",
+    "        cursor.execute(\"ALTER SESSION SET NLS_DATE_FORMAT = 'DD/MM/YYYY hh24:mi:ss'\")\n",
+    "        for key,val  in X.items():\n",
+    "            try:\n",
+    "                # for tab, insrt in insert_creation:\n",
+    "                for insert in val:\n",
+    "                    # print(insert)\n",
+    "                    cursor.execute(insert)\n",
+    "                    # cnxn.commit()\n",
+    "                cnxn_pool.release(cnxn)\n",
+    "                # print(\"completed\")\n",
+    "            # cnxn.commit()\n",
+    "            except Exception as e:\n",
+    "                cnxn.rollback()\n",
+    "                print(e)\n",
+    "                print(key)\n",
+    "                cnxn_pool.release(cnxn)\n",
+    "                break\n",
+    "    print(\"data chunk inserted\")\n",
+    "    \n",
+    "\n",
+    "push_data()\n",
+    "cnxn_pool.close()"
+   ]
   }
  ],
  "metadata": {
