--- a/etl2.ipynb
+++ b/etl2.ipynb
@@ -10,41 +10,125 @@
     "# ? insert stat dump\n",
     "import json\n",
     "import cx_Oracle as cx\n",
-    "cnxn_pool = cx.SessionPool('PVD_MART_30AUG','rxlogix','10.100.22.99:1521/PVSDEVDB',min=10,max=15,encoding='UTF-8')\n",
-    "def push_data():\n",
+    "from flatten_json import flatten\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "import time\n",
+    "\n",
+    "cnxn_pool = cx.SessionPool('PVD_MART_30AUG','rxlogix','10.100.22.99:1521/PVSDEVDB',min=12,max=15,encoding='UTF-8')\n",
+    "\n",
+    "def include_keys(dic, keys):\n",
+    "    key_set = set(keys) & set(dic.keys())\n",
+    "    return {key: dic[key] for key in key_set}\n",
+    "\n",
+    "def pre_proc(data):\n",
+    "        print(type(data))\n",
+    "        for k,v in data.items():\n",
+    "            if isinstance(v,dict):\n",
+    "                if 'ArrayElem' in v.keys():\n",
+    "                # for k1,v1 in v.items():\n",
+    "                    data[k]=v['ArrayElem']\n",
+    "        return data\n",
+    "    \n",
+    "def flatten_list(d):\n",
+    "    try:\n",
+    "        key, lst = next((k, v) for k, v in d.items() if isinstance(v, list))\n",
+    "    except (StopIteration, AttributeError):\n",
+    "        return [flatten(d,'.')]\n",
+    "    return [flatten({**d, **{key: v}},'.') for record in lst for v in flatten_list(record)]\n",
+    "\n",
+    "def generate_inserts(table, data):\n",
+    "    jsons = flatten_list(data)\n",
+    "    statements = []\n",
+    "    ins = jsons[0]\n",
+    "    ins = f\"INSERT INTO {table} ({','.join(ins.keys())}) VALUES ({','.join([':'+str(v) for v in range(len(ins.keys()))])})\"\n",
+    "    val_array = []\n",
+    "    for i in jsons:\n",
+    "        cols = i.keys()\n",
+    "        values = i.values()\n",
+    "        # ins = f\"INSERT INTO {table} ({','.join(cols)}) VALUES ({','.join(['%s']*len(cols))})\"\n",
+    "        val_array.append(tuple(values))\n",
+    "    statements.append(ins)\n",
+    "    statements.append(val_array)\n",
+    "    return statements\n",
+    "\n",
+    "def return_all_inserts(dictionary)->dict:\n",
+    "    generic_keys = ['TENANT_ID','CASE_ID','VERSION_NUM']\n",
+    "    inserts = {}\n",
+    "    dictionary2 = pre_proc(dictionary)\n",
+    "    for i in dictionary2:\n",
+    "        if i not in generic_keys:\n",
+    "            t1 = include_keys(dictionary, generic_keys+[i])\n",
+    "            for j in t1:\n",
+    "                if isinstance(t1[j],dict):\n",
+    "                    if 'ArrayElem' in t1[j].keys():\n",
+    "                        t1[j] = t1[j]['ArrayElem']\n",
+    "            inserts[i] = tuple(generate_inserts(i,t1))\n",
+    "    return inserts\n",
+    "\n",
+    "\n",
+    "def push_data(dictionary1):\n",
+    "    print(\"Thread created\")\n",
+    "    dictionary2 = return_all_inserts(dictionary1)\n",
     "    cnxn = cnxn_pool.acquire()\n",
     "    cursor = cnxn.cursor()\n",
     "    cursor.execute(\"ALTER SESSION SET NLS_DATE_FORMAT = 'DD/MM/YYYY hh24:mi:ss'\")\n",
     "    print(\"\"\"INCURSION :)(: STARTED\"\"\")\n",
     "    counter = 1\n",
-    "    with open('read.json','r') as insert_stat:\n",
-    "        string = insert_stat.read()\n",
-    "        X = json.loads(string)\n",
-    "        failed_insert = {}\n",
-    "        for key,val  in X.items(): \n",
-    "            for insert in val:\n",
-    "                try:\n",
-    "                    # print(insert)\n",
-    "                    cursor.execute(insert)\n",
-    "                    cnxn.commit()\n",
-    "                except Exception as e:\n",
-    "                    print(e)\n",
-    "                    failed_insert[key] = val\n",
-    "                    break\n",
-    "                else:\n",
-    "                    print(\"Insert Done\")\n",
-    "            print(counter,key)\n",
-    "            counter+=1\n",
-    "        if len(failed_insert) == 0:\n",
-    "            cnxn.commit()\n",
-    "        else:\n",
-    "            cnxn.rollback()\n",
+    "    failed_insert = {}\n",
+    "    for key,val  in dictionary2.items(): \n",
+    "        val_array = val[1]\n",
+    "        # print(val[0],val_array)\n",
+    "        try:\n",
+    "            cursor.executemany(val[0],val_array)\n",
+    "            # cnxn.commit()\n",
+    "        except cx.DatabaseError as e:\n",
+    "            print(e)\n",
+    "            failed_insert[key] = val\n",
+    "            # break\n",
+    "        # else:\n",
+    "            # print(\"Insert Done\")\n",
+    "        # print(counter,key)\n",
+    "        counter+=1\n",
+    "    if len(failed_insert) == 0:\n",
+    "        cnxn.commit()\n",
+    "        print(\"All Inserts Committed\")\n",
+    "    else:\n",
+    "        cnxn.rollback()\n",
+    "        print(\"Rollback Done\")\n",
     "        # print(failed_insert)\n",
     "    print(\"data chunk inserted\")\n",
     "    cnxn_pool.release(cnxn)\n",
-    "if __name__ == '__main__':\n",
-    "    push_data()\n",
-    "    cnxn_pool.close()"
+    "    \n",
+    "        \n",
+    "# if __name__ == '__main__':\n",
+    "#     with open('jsons/msg1.json','r') as msg1:\n",
+    "#         string = msg1.read()\n",
+    "#         D = json.loads(string)\n",
+    "#         # dictionary = return_all_inserts(D)\n",
+    "#         push_data(D)\n",
+    "#     cnxn_pool.close()\n",
+    "    \n",
+    "def split_file(a,n):\n",
+    "    k,m = divmod(len(a),n)\n",
+    "    return list((a[i * k + min(i, m):(i + 1) * k + min(i + 1, m)] for i in range(n)))\n",
+    "\n",
+    "def load(file)->list:\n",
+    "    with open(file,'r', encoding=\"utf8\") as fp:\n",
+    "        string = fp.read()\n",
+    "        o = json.loads(string)\n",
+    "        line_chunk = split_file(o,1)\n",
+    "        print('chunk created')\n",
+    "        return line_chunk\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    st = time.time()\n",
+    "    chunk_data = load('jsons/msg1.json')\n",
+    "    with ThreadPoolExecutor(max_workers=10) as threads:\n",
+    "        threads.map(push_data,chunk_data)\n",
+    "    cnxn_pool.close()\n",
+    "    et = time.time()\n",
+    "    print(et-st)"
    ]
   },
   {
@@ -55,7 +139,8 @@
    "source": [
     "%%time\n",
     "# ? trunacting the table\n",
-    "\n",
+    "import json\n",
+    "import cx_Oracle as cx\n",
     "cdns = cx.makedsn('10.100.22.99','1521',service_name='PVSDEVDB')\n",
     "cnxn = cx.connect(user=r'PVD_MART_30AUG', password='rxlogix', dsn=cdns)\n",
     "c = cnxn.cursor()\n",
@@ -108,12 +193,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ? extract data\n",
+    "# ? insert stat dump\n",
+    "import json\n",
+    "import cx_Oracle as cx\n",
+    "from flatten_json import flatten\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "import time\n",
+    "from multiprocessing import Process,Pool\n",
+    "from  threading import Lock\n",
+    "cnxn_pool = cx.SessionPool('PVD_MART_30AUG','rxlogix','10.100.22.99:1521/PVSDEVDB',min=12,max=15,encoding='UTF-8')\n",
     "\n",
-    "cdns = cx.makedsn('pvd-develop.cksh17mdz5oo.us-west-1.rds.amazonaws.com','1521',service_name='orcl')\n",
-    "cnxn = cx.connect(user=r'STG_DLP_54_DM_1', password='rxlogix', dsn=cdns)\n",
-    "table_name = ['C_ACTIONS_ADDL', 'C_AE_IDENTIFICATION', 'C_AE_IDENTIFICATION_FU', 'C_ASSESS_ADDL', 'C_CHARACTERISTICS_FU', 'C_CONTACT_LOG_ADDL', 'C_DEATH_ADDL', 'C_DEATH_CAUSE', 'C_DEV_FAC_CODE_DEV_FU', 'C_DEV_FAC_CODE_PAT_FU', 'C_DEVICE_COMPONENTS', 'C_DOCS', 'C_DOSE_REGIMENS_ADDL', 'C_DRUG_DOSAGE', 'C_DRUG_DOSAGE_FU', 'C_DRUG_IDENTIFICATION', 'C_DRUG_IDENTIFICATION_FU', 'C_DUE_DILIGENCE_FU', 'C_EVENT_ADDL', 'C_EVENT_ASSESS_ADDL', 'C_EVENT_DETAIL_ADDL', 'C_FOLLOWUP_ADDL', 'C_FOLLOWUP_DATES_FU', 'C_HOSP_ADDL', 'C_IDENTIFICATION', 'C_IDENTIFICATION_FU', 'C_LAB_DATA_ADDL', 'C_LIT_REFERENCE_AUTHOR_FU', 'C_LIT_REFERENCE_FU', 'C_LITERATURE_ADDL', 'C_MASTER_ADDL', 'C_MEDWATCH_DATA_ADDL', 'C_NARRATIVE_ADDL', 'C_NOTES_ATTACH_ADDL', 'C_PARENT_CHARACTERISTICS', 'C_PARENT_CHARACTERISTICS_FU', 'C_PARENT_INFO_ADDL', 'C_PARENT_NEONATES_ADDL', 'C_PARENT_NEONATES_FU', 'C_PARENT_PREGNANCY_ADDL', 'C_PARENT_RACE_FU', 'C_PARENT_REL_MED_CONDN', 'C_PARENT_REL_MED_CONDN_ADDL', 'C_PARENT_REL_PROD_HIST_ADDL', 'C_PARENT_REL_PROD_HISTORY', 'C_PAT_HIST_ADDL', 'C_PAT_INFO_ADDL', 'C_PAT_RACE_ADDL', 'C_PATIENT_CHARACTERISTICS', 'C_PATIENT_CHARACTERISTICS_FU', 'C_PATIENT_NEONATES_ADDL', 'C_PATIENT_NEONATES_FU', 'C_PATIENT_PREGNANCY_ADDL', 'C_PATIENT_RACE_FU', 'C_PATIENT_REL_MED_CONDN', 'C_PATIENT_REL_MED_CONDN_ADDL', 'C_PATIENT_REL_PROD_HIST_ADDL', 'C_PATIENT_REL_PROD_HISTORY', 'C_PROD_AE_AUTH_LABELNESS_FU', 'C_PROD_AE_CAUSALITY', 'C_PROD_AE_MATRIX', 'C_PROD_AE_MATRIX_FU', 'C_PROD_DEVICES_ADDL', 'C_PROD_DRUGS_ADDL', 'C_PROD_IDENTIFICATION', 'C_PROD_IDENTIFICATION_FU', 'C_PRODUCT_ADDL', 'C_PRODUCT_INDICATIONS', 'C_REFERENCES_FU', 'C_REPORTERS_ADDL', 'C_ROUTING_ADDL', 'C_SENDER_DIAGNOSIS', 'C_SOURCE', 'C_SOURCE_FU', 'C_STUDY_ADDL', 'C_STUDY_IDENTIFICATION', 'C_STUDY_IDENTIFICATION_FU', 'C_SUBSTANCE', 'C_SUMMARY_LOCAL_LANG', 'C_TASKS_FU', 'C_TEST_PROCEDURE_RESULT', 'C_WORKFLOW_FU']\n",
-    "case_id = [88421045,8421701,8458381,8476974,8476979,8477010,8477013,8477028,8477030,8477034]"
+    "def include_keys(dic, keys):\n",
+    "    key_set = set(keys) & set(dic.keys())\n",
+    "    return {key: dic[key] for key in key_set}\n",
+    "\n",
+    "def pre_proc(data):\n",
+    "        print(type(data))\n",
+    "        for k,v in data.items():\n",
+    "            if isinstance(v,dict):\n",
+    "                if 'ArrayElem' in v.keys():\n",
+    "                # for k1,v1 in v.items():\n",
+    "                    data[k]=v['ArrayElem']\n",
+    "        return data\n",
+    "    \n",
+    "def flatten_list(d):\n",
+    "    try:\n",
+    "        key, lst = next((k, v) for k, v in d.items() if isinstance(v, list))\n",
+    "    except (StopIteration, AttributeError):\n",
+    "        return [flatten(d,'.')]\n",
+    "    return [flatten({**d, **{key: v}},'.') for record in lst for v in flatten_list(record)]\n",
+    "\n",
+    "def generate_inserts(table, data):\n",
+    "    jsons = flatten_list(data)\n",
+    "    statements = []\n",
+    "    ins = jsons[0]\n",
+    "    ins = f\"INSERT INTO {table} ({','.join(ins.keys())}) VALUES ({','.join([':'+str(v) for v in range(len(ins.keys()))])})\"\n",
+    "    val_array = []\n",
+    "    for i in jsons:\n",
+    "        cols = i.keys()\n",
+    "        values = i.values()\n",
+    "        # ins = f\"INSERT INTO {table} ({','.join(cols)}) VALUES ({','.join(['%s']*len(cols))})\"\n",
+    "        val_array.append(tuple(values))\n",
+    "    statements.append(ins)\n",
+    "    statements.append(val_array)\n",
+    "    return statements\n",
+    "\n",
+    "def return_all_inserts(dictionary)->dict:\n",
+    "    generic_keys = ['TENANT_ID','CASE_ID','VERSION_NUM']\n",
+    "    inserts = {}\n",
+    "    dictionary2 = pre_proc(dictionary)\n",
+    "    for i in dictionary2:\n",
+    "        if i not in generic_keys:\n",
+    "            t1 = include_keys(dictionary, generic_keys+[i])\n",
+    "            for j in t1:\n",
+    "                if isinstance(t1[j],dict):\n",
+    "                    if 'ArrayElem' in t1[j].keys():\n",
+    "                        t1[j] = t1[j]['ArrayElem']\n",
+    "            inserts[i] = tuple(generate_inserts(i,t1))\n",
+    "    return inserts\n",
+    "\n",
+    "\n",
+    "def push_data(dictionary1):\n",
+    "    lock.acquire()\n",
+    "    print(\"Thread created\")\n",
+    "    dictionary2 = return_all_inserts(dictionary1[0])\n",
+    "    # print(dictionary2)\n",
+    "    cnxn = cnxn_pool.acquire()\n",
+    "    cursor = cnxn.cursor()\n",
+    "    cursor.execute(\"ALTER SESSION SET NLS_DATE_FORMAT = 'DD/MM/YYYY hh24:mi:ss'\")\n",
+    "    print(\"\"\"INCURSION :)(: STARTED\"\"\")\n",
+    "    counter = 1\n",
+    "    failed_insert = {}\n",
+    "    for key,val  in dictionary2.items(): \n",
+    "        val_array = val[1]\n",
+    "        # print(val[0],val_array)\n",
+    "        try:\n",
+    "            cursor.executemany(val[0],val_array)\n",
+    "            # cnxn.commit()\n",
+    "        except cx.DatabaseError as e:\n",
+    "            print(e)\n",
+    "            failed_insert[key] = val\n",
+    "            # break\n",
+    "        # else:\n",
+    "            # print(\"Insert Done\")\n",
+    "        # print(counter,key)\n",
+    "        counter+=1\n",
+    "    if len(failed_insert) == 0:\n",
+    "        cnxn.commit()\n",
+    "        print(\"All Inserts Committed\")\n",
+    "    else:\n",
+    "        cnxn.rollback()\n",
+    "        print(\"Rollback Done\")\n",
+    "        # print(failed_insert)\n",
+    "    print(\"data chunk inserted\")\n",
+    "    cnxn_pool.release(cnxn)\n",
+    "    lock.release()\n",
+    "    # failed_insert\n",
+    "    \n",
+    "        \n",
+    "# if __name__ == '__main__':\n",
+    "#     with open('jsons/msg1.json','r') as msg1:\n",
+    "#         string = msg1.read()\n",
+    "#         D = json.loads(string)\n",
+    "#         # dictionary = return_all_inserts(D)\n",
+    "#         push_data(D)\n",
+    "#     cnxn_pool.close()\n",
+    "    \n",
+    "def split_file(a,n):\n",
+    "    k,m = divmod(len(a),n)\n",
+    "    return list((a[i * k + min(i, m):(i + 1) * k + min(i + 1, m)] for i in range(n)))\n",
+    "\n",
+    "def load(file)->list:\n",
+    "    with open(file,'r', encoding=\"utf8\") as fp:\n",
+    "        string = fp.read()\n",
+    "        o = json.loads(string)\n",
+    "        line_chunk = split_file(o,1)\n",
+    "        print('chunk created')\n",
+    "        return line_chunk\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    st = time.time()\n",
+    "    chunk_data = load('jsons/msg1.json')\n",
+    "    lock = Lock()\n",
+    "    with ThreadPoolExecutor(max_workers=10) as threads:\n",
+    "        threads.map(push_data,chunk_data,lock)\n",
+    "    cnxn_pool.close()\n",
+    "    # # chunk_data = load('output.json')\n",
+    "    # pool = Pool(7)\n",
+    "    # pool.map(push_data,chunk_data)\n",
+    "    # cnxn_pool.close()\n",
+    "    et = time.time()\n",
+    "    print(et-st)"
    ]
   },
   {
@@ -121,7 +332,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json \n",
+    "def split_file(a,n):\n",
+    "    k,m = divmod(len(a),n)\n",
+    "    return list((a[i * k + min(i, m):(i + 1) * k + min(i + 1, m)] for i in range(n)))\n",
+    "\n",
+    "def load(file)->list:\n",
+    "    with open(file,'r', encoding=\"utf8\") as fp:\n",
+    "        string = fp.read()\n",
+    "        o = json.loads(string)\n",
+    "        line_chunk = split_file(o,1)\n",
+    "        print('chunk created')\n",
+    "        return line_chunk\n",
+    "    \n",
+    "chunk_data = load('jsons/msg1.json')\n",
+    "print(len(chunk_data[0]))\n",
+    "print(chunk_data)"
+   ]
   }
  ],
  "metadata": {
